# testbot-release

./: CHANGELOG.rst  CMakeLists.txt  debian.store  package.xml  patches.conf  releaser_history.json
debian/: changelog  control  gbp.conf  rules
launch/: testbot.launch
