<?xml version="1.0"?>
<package format="2">
  <name>testbot</name>
  <version>1.0.0</version>
  <description>ROS packages for the Testbot (meta package)</description>
  <maintainer email="phil@marble.io">Philip Freeman</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hello_world</exec_depend>
  <export><metapackage/></export>
</package>
