<?xml version="1.0"?>
<package format="2">
  <name>testbot</name>
  <version>1.1.0</version>
  <description>main testbot package</description>
  <maintainer email="phil@marble.io">Philip Freeman</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hello_world</exec_depend>
  <exec_depend>libsensors_monitor</exec_depend>
</package>
